--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Joris van Steenbrugge
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Joris van Steenbrugge!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hello there, my name is Joris van Steenbrugge.</h1>
+	<p>I am bio-informatics student <a href="/about">Read more about me</a></p>
 </div><!-- /.blurb -->
