--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Joris van Steenbrugge
 ---
 <div class="blurb">
 	<h1>Hello there, my name is Joris van Steenbrugge.</h1>
-	<p>I am a bio-informatics student who is about to graduate <a href="/about">Read more about me</a></p>
+	<p>I am a bio-informatics student who is about to graduate. <a href="/about">Read more about me</a></p>
 </div><!-- /.blurb -->
